cmake_minimum_required(VERSION 3.17)
project(cpp_test)

set(CMAKE_CXX_STANDARD 17)

find_package(Boost 1.75 REQUIRED COMPONENTS system thread log)
ADD_DEFINITIONS(-DBOOST_LOG_DYN_LINK)
if (Boost_FOUND)
    add_executable(server src/server.cpp include/server.hpp include/protocol.hpp)
    target_include_directories(server PRIVATE ${BOOST_INCLUDE_DIRS})
    target_include_directories(server PUBLIC include/)
    target_link_libraries(server ${Boost_LIBRARIES})
    if (MINGW)
        target_link_libraries(server ws2_32 wsock32)
    endif ()

    add_executable(client src/client.cpp include/client.hpp include/protocol.hpp)
    target_include_directories(client PRIVATE ${BOOST_INCLUDE_DIRS})
    target_include_directories(client PUBLIC include/)
    target_link_libraries(client ${Boost_LIBRARIES})
    if (MINGW)
        target_link_libraries(client ws2_32 wsock32)
    endif ()
endif ()
