find_package(Boost 1.75 REQUIRED COMPONENTS system thread log)
add_definitions(-DBOOST_LOG_DYN_LINK)
if (Boost_FOUND)
    add_library(client_lib src/client.cpp include/client.hpp)
    target_include_directories(client_lib PRIVATE ${BOOST_INCLUDE_DIRS})
    target_include_directories(client_lib PUBLIC include/)
    target_link_libraries(client_lib protocol ${Boost_LIBRARIES})
    if (MINGW)
        target_link_libraries(client_lib ws2_32 wsock32)
    endif ()

    add_executable(client src/main.cpp)
    target_link_libraries(client client_lib)
endif ()