find_package(Boost 1.75 REQUIRED COMPONENTS system thread log)
add_definitions(-DBOOST_LOG_DYN_LINK)
if (Boost_FOUND)
    add_library(server_lib src/server.cpp include/server.hpp)
    target_include_directories(server_lib PRIVATE ${BOOST_INCLUDE_DIRS})
    target_include_directories(server_lib PUBLIC include/)
    target_link_libraries(server_lib protocol ${Boost_LIBRARIES})
    if (MINGW)
        target_link_libraries(server_lib ws2_32 wsock32)
    endif ()

    add_executable(server src/main.cpp)
    target_link_libraries(server server_lib)
endif ()